force-app/main/default/objects/Case/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>