force-app/main/default/objects/Case/fields/Version_History__c.field-meta.xml
<CustomField>
    <fullName>Version_History__c</fullName>
    <label>Version History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>