force-app/main/default/objects/Case/fields/Version_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Version_Snapshot__c</fullName>
    <label>Version Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>